--- a/src/ProtonDrive.App.Windows/Resources/Strings.fr.resx
+++ b/src/ProtonDrive.App.Windows/Resources/Strings.fr.resx
@@ -792,22 +792,22 @@ Désactivez et réactivez sa synchronisation pour le restaurer et effacer cette 
     <value>{0} dossiers ne peuvent pas être synchronisé car ils ont un sous-dossier déjà synchronisé avec Proton Drive</value>
   </data>
   <data name="Main_MyComputer_Folders_AddFolders_ValidationError_LocalFileSystemAccessFailedFormat">
-    <value>{0} dossiers ne sont pas accessibles.</value>
+    <value>{0} Les fichiers sont inaccessibles</value>
   </data>
   <data name="Main_MyComputer_Folders_AddFolders_ValidationError_LocalFolderDoesNotExistFormat">
-    <value>{0} dossiers sont introuvables ou ne peuvent être ouverts.</value>
+    <value>{0} Les fichiers sont manquants ou ne peuvent être ouverts.</value>
   </data>
   <data name="Main_MyComputer_Folders_AddFolders_ValidationError_LocalVolumeNotSupportedFormat">
-    <value>{0} dossiers ne peuvent pas être synchronisé car ils se trouvent sur un lecteur non pris en charge</value>
+    <value>{0} Les fichiers sont impossibles d'être synchronisés car ils se trouvent sur un lecteur non pris en charge</value>
   </data>
   <data name="Main_MyComputer_Folders_AddFolders_ValidationError_NetworkFolderNotSupportedFormat">
-    <value>{0} dossiers ne peuvent pas être synchronisés car les dossiers réseau ne sont pas pris en charge.</value>
+    <value>{0} Les fichiers ne peuvent pas être synchronisés puisque les dossiers réseau ne sont pas pris en charge.</value>
   </data>
   <data name="Main_MyComputer_Folders_AddFolders_ValidationError_NonSyncableFolderFormat">
-    <value>{0} dossiers ne peuvent pas être synchronisés car il s'agit de dossiers système.</value>
+    <value>{0} Les fichiers ne peuvent pas être synchronisés étant des fichiers du système.</value>
   </data>
   <data name="Main_MyComputer_Folders_AddFolders_ValidationError_UnableToAddFoldersFormat">
-    <value>Impossible d'ajouter {0} dossiers</value>
+    <value>Impossible d'ajouter {0} des fichiers</value>
   </data>
   <data name="Main_MyComputer_Folders_AddFolders_ValidationError_UnableToAddOneFolder">
     <value>Impossible d'ajouter 1 dossier</value>
@@ -876,14 +876,14 @@ désactiver l'optimisation du stockage à tout moment.</value>
     <value>Retirer le dossier ?</value>
   </data>
   <data name="Main_MyComputer_Folders_StorageOptimizationTurnedOffNotification_Message_1">
-    <value>Les fichiers dans le dossier "{0}" seront désormais toujours disponibles sur votre appareil. Cela peut prendre quelques minutes avant que tous les fichiers ne soient téléchargés (vous pouvez vérifier l’état dans l’explorateur de fichiers).</value>
+    <value>Les fichiers dans le dossier "{0}" seront désormais disponibles en permanence sur votre appareil. Cela peut prendre quelques minutes avant que tous les fichiers ne soient téléchargés (vous pouvez vérifier le statut dans l’explorateur de fichiers).</value>
     <comment>Placeholder {0}: folder name</comment>
   </data>
   <data name="Main_MyComputer_Folders_StorageOptimizationTurnedOffNotification_Message_2">
     <value>Vous pouvez toujours libérer manuellement de l'espace pour chaque fichier dans ses paramètres.</value>
   </data>
   <data name="Main_MyComputer_Folders_StorageOptimizationTurnedOffNotification_Title">
-    <value>Tous les fichiers sont disponibles en permanence sur cet appareil.</value>
+    <value>Tous les fichiers sont disponibles sur cet appareil en permanence</value>
   </data>
   <data name="Main_MyComputer_Folders_StorageOptimizationUnavailableNotification_Message_1">
     <value>Le dossier « {0} » ne peut pas utiliser la synchronisation à la demande pour optimiser le stockage car {1}.</value>
@@ -942,7 +942,7 @@ désactiver l'optimisation du stockage à tout moment.</value>
     <value>Importation en cours... {0} sur {1}</value>
   </data>
   <data name="Main_Photos_Folders_Items_Label">
-    <value>éléments</value>
+    <value>Les éléments</value>
   </data>
   <data name="Main_Photos_Folders_Menu_Item_OpenFolder">
     <value>_Ouvrir le dossier</value>
@@ -1130,7 +1130,7 @@ Le contenu des fichiers sera téléchargé à la demande uniquement.</value>
     <value>Pour ajouter des éléments, veuillez arrêter la synchronisation de certains éléments anciens.</value>
   </data>
   <data name="Main_SharedWithMe_Warning_MaxNumberOfSyncedItems_Limit">
-    <value>Vous ne pouvez synchroniser que {0} éléments à la fois.</value>
+    <value>Vous ne pouvez synchroniser que {0} éléments simultanément.</value>
   </data>
   <data name="Main_SharedWithMe_Warning_SharingUnavailable">
     <value>Le partage est temporairement indisponible.</value>
@@ -1284,7 +1284,7 @@ Le contenu des fichiers sera téléchargé à la demande uniquement.</value>
     <value>Le dossier local doit être vide avant de configurer la synchronisation.</value>
   </data>
   <data name="MappingErrorCode_Value_LocalVolumeNotSupported">
-    <value>Ce type de lecteur local n'est pas pris en charge. Essayez de configurer le dossier de synchronisation sur un autre lecteur local.</value>
+    <value>Ce type de disque n'est pas pris en charge. Essayez de configurer le fichier de synchronisation sur un autre lecteur local.</value>
   </data>
   <data name="MappingErrorCode_Value_None">
     <value></value>
@@ -1395,19 +1395,19 @@ Le contenu des fichiers sera téléchargé à la demande uniquement.</value>
     <value>Obtenir plus d'espace de stockage</value>
   </data>
   <data name="PhotoImportErrorCode_Value_AlbumDoesNotExist">
-    <value>L'importation n'a pas abouti. L'album n'existe pas.</value>
+    <value>L'importation n'a pas abouti. Le registre n'existe pas.</value>
   </data>
   <data name="PhotoImportErrorCode_Value_MaximumNumberOfAlbumsReached">
-    <value>L'importation n'a pas abouti. Le nombre maximum d'albums a été atteint.</value>
+    <value>L'importation n'a pas abouti. Le nombre de registres maximal a été atteint.</value>
   </data>
   <data name="PhotoImportErrorCode_Value_MaximumNumberOfPhotosPerAlbumReached">
-    <value>L'importation n'a pas abouti. Le nombre maximal de photos par album a été atteint.</value>
+    <value>L'importation n'a pas abouti. Le nombre maximal de photos par registre a été atteint.</value>
   </data>
   <data name="PhotoImportErrorCode_Value_Unknown">
-    <value>L'importation n'a pas abouti. Veuillez réessayer.</value>
+    <value>L'importation n'a malheureusement pas abouti. Veuillez réessayer.</value>
   </data>
   <data name="PhotoImportFolderStatus_Value_Failed">
-    <value>L'importation n'a pas abouti.</value>
+    <value>L'importation n'a pas été aboutie.</value>
   </data>
   <data name="PhotoImportFolderStatus_Value_Importing">
     <value></value>
@@ -1422,7 +1422,7 @@ Le contenu des fichiers sera téléchargé à la demande uniquement.</value>
     <value></value>
   </data>
   <data name="PhotoImportFolderStatus_Value_Succeeded">
-    <value>L'Importation a réussi</value>
+    <value>L'Importation a été réussie</value>
   </data>
   <data name="PhotoImportFolderStatus_Value_ValidationFailed">
     <value></value>
