--- a/src/ProtonDrive.App.Windows/Resources/Strings.resx
+++ b/src/ProtonDrive.App.Windows/Resources/Strings.resx
@@ -453,11 +453,11 @@
   <data name="Main_MyComputer_Folders_StorageOptimizationUnavailableNotification_Title" xml:space="preserve">
     <value>Storage optimization unavailable</value>
   </data>
-	<data name="Main_MyComputer_Folders_StorageOptimizationUnavailableNotification_Message_1" xml:space="preserve">
+  <data name="Main_MyComputer_Folders_StorageOptimizationUnavailableNotification_Message_1" xml:space="preserve">
     <value>The "{0}" folder can't use on-demand sync to optimize storage, because {1}.</value>
     <comment>Placeholder {0}: folder name. Placeholder {1}: the reason text, one of resources with "StorageOptimizationErrorCode_Value_..." key.</comment>
   </data>
-	<data name="Main_MyComputer_Folders_StorageOptimizationUnavailableNotification_Message_2" xml:space="preserve">
+  <data name="Main_MyComputer_Folders_StorageOptimizationUnavailableNotification_Message_2" xml:space="preserve">
     <value>Your files will still sync with Proton Drive and remain available on both your computer and in the cloud.</value>
   </data>
   <data name="Main_MyComputer_Device_Button_Rename" xml:space="preserve">
@@ -830,6 +830,12 @@ disable storage optimization at any time.</value>
   <data name="SignIn_Button_Back" xml:space="preserve">
     <value>_Back</value>
     <comment>The underscore (_) denotes an access key, which enhances the app's accessibility by allowing users to press the letter following the underscore instead of using a mouse to click the button.</comment>
+  </data>
+  <data name="SignIn_Button_LearnMore" xml:space="preserve">
+    <value>Learn more</value>
+  </data>
+  <data name="SignIn_Text_SecurityKeyNotSupported" xml:space="preserve">
+    <value>Your system does not support security key</value>
   </data>
   <data name="BugReport_Text_Email_Label" xml:space="preserve">
     <value>_Email</value>
@@ -1286,6 +1292,12 @@ Toggle its sync off and on again to restore it and clear this error.</value>
   <data name="SignIn_Text_2FACode" xml:space="preserve">
     <value>Enter the code from your authenticator app</value>
   </data>
+  <data name="SignIn_Text_SecurityKey" xml:space="preserve">
+    <value>Insert a security key linked to your Proton Account.</value>
+  </data>
+  <data name="SignIn_Text_No2FAMethodFound" xml:space="preserve">
+    <value>No two-factor authentication method found.</value>
+  </data>
   <data name="SignIn_Message_SigningIn" xml:space="preserve">
     <value>Signing in to your account</value>
   </data>
@@ -1501,6 +1513,15 @@ Contents of files will be downloaded on demand only.</value>  </data>
   </data>
   <data name="Main_MyComputer_Folders_AddFolders_ValidationError_LocalFileSystemAccessFailedFormat" xml:space="preserve">
     <value>{0} folder(s) cannot be accessed</value>
+  </data>
+  <data name="SecondFactorInputPage_Value_NotSupported" xml:space="preserve">
+    <value></value>
+  </data>
+  <data name="SecondFactorInputPage_Value_Totp" xml:space="preserve">
+    <value>Authenticator app</value>
+  </data>
+  <data name="SecondFactorInputPage_Value_Fido2" xml:space="preserve">
+    <value>Security key</value>
   </data>
   <data name="SignIn_Text_ValidationError_UsernameRequired" xml:space="preserve">
     <value>Username is required</value>
